# opsbox-rego

./: .gitignore  README.md  build.py  mkdocs.yml  pyproject.toml
assistants/cost_savings/: README.md  cost_savings.toml  pyproject.toml
assistants/cost_savings/cost_savings/: cost_savings.py
aws_providers/: pyproject.toml
aws_providers/cw/: cw_metrics.py  cw_metrics.toml
aws_providers/ec2/: ec2_provider.py  pyproject.toml  test_ec2_provider.py
aws_providers/ec2/ec2_provider/: ec2_provider.py  manifest.toml  string_to_dict.py  test_ec2_provider.py
aws_providers/efs/: pyproject.toml
aws_providers/efs/efs_provider/: efs_provider.py  manifest.toml  test_efs_provider.py
aws_providers/elb/: pyproject.toml
aws_providers/elb/elb_provider/: elb_provider.py  manifest.toml  test_elb_provider.py
aws_providers/iam/: iam_provider.py  iam_provider.toml  pyproject.toml  test_iam_provider.py
aws_providers/iam/iam_provider/: iam_provider.py  test_iam_provider.py
aws_providers/r53/: pyproject.toml  r53_provider.toml
aws_providers/r53/r53_provider/: r53_provider.py  test_r53_provider.py
aws_providers/rds/: pyproject.toml  rds_provider.py  rds_provider.toml  test_rds_provider.py
aws_providers/rds/rds_provider/: rds_provider.py  test_rds_provider.py
aws_providers/s3/: pyproject.toml  s3_provider.py  test_s3_provider.py
aws_providers/s3/s3_provider/: manifest.toml  s3_provider.py  test_s3_provider.py
aws_rego/: conftest.py  pyproject.toml  test_aws_rego.py
aws_rego/cw_checks/: cw_insights.py  cw_insights.rego  cw_insights.toml  mkdocs.yml
aws_rego/cw_checks/docs/: cw_insights.md
aws_rego/ec2_checks/: README.md  ec2_test_data.json  mkdocs.yml  pyproject.toml
aws_rego/ec2_checks/docs/: ec2_old_snapshots.md  idle_instances.md  stray_ebs.md  stray_instances.md  unattached_eips.md
aws_rego/ec2_checks/ec2_old_snapshots/: ec2_old_snapshots.py  manifest.toml  pyproject.toml  test_old_snapshots.py
aws_rego/ec2_checks/idle_instances/: idle_instances.py  idle_instances.rego  manifest.toml  pyproject.toml  test_idle_instances.py
aws_rego/ec2_checks/stray_ebs/: manifest.toml  pyproject.toml  stray_ebs.py  stray_ebs.rego  test_stray_ebs.py
aws_rego/ec2_checks/stray_instances/: pyproject.toml  stray_instances.rego
aws_rego/ec2_checks/unattached_eips/: manifest.toml  pyproject.toml  test_unattached_eips.py  unattached_eips.py  unattached_eips.rego  unattached_eips.toml
aws_rego/efs_checks/: MANIFEST.in  efs_test_data.json  pyproject.toml
aws_rego/efs_checks/high_percentiolimit/: high_percentiolimit.py  high_percentiolimit.rego  manifest.toml  test_high_percentiolimit.py
aws_rego/elb_checks/: README.md  elb_test_data.json  mkdocs.yml  pyproject.toml
aws_rego/elb_checks/docs/: high_error_rate.md  inactive_load_balancers.md  low_request_counts.md
aws_rego/elb_checks/high_error_rate/: high_error_rate.py  high_error_rate.rego  high_error_rate.toml  manifest.toml  pyproject.toml  test_high_error_rate.py
aws_rego/elb_checks/inactive_load_balancers/: inactive_load_balancers.py  inactive_load_balancers.toml  manifest.toml  pyproject.toml  test_inactive_load_balancers.py
aws_rego/elb_checks/low_request_counts/: low_request_count.py  low_request_count.rego  manifest.toml  pyproject.toml  test_low_request_count.py
aws_rego/elb_checks/no_healthy_targets/: manifest.toml  no_healthy_targets.py  pyproject.toml  test_no_healthy_targets.py
aws_rego/iam_checks/: README.md  iam_test_data.json  mkdocs.yml  pyproject.toml
aws_rego/iam_checks/console_access/: console_access.py  manifest.toml  pyproject.toml  test_console_access.py
aws_rego/iam_checks/docs/: console_access.md  mfa_enabled.md  overdue_api_keys.md  unused_policies.md
aws_rego/iam_checks/mfa_enabled/: manifest.toml  mfa_enabled.py  pyproject.toml  test_mfa_enabled.py
aws_rego/iam_checks/overdue_api_keys/: manifest.toml  overdue_api_keys.py  overdue_api_keys.rego  pyproject.toml  test_overdue_api_keys.py
aws_rego/iam_checks/unused_policies/: manifest.toml  pyproject.toml  test_unused_policies.py  unused_policies.py  unused_policies.rego
aws_rego/r53_checks/: README.md  mkdocs.yml  pyproject.toml  r53_test_data.json
aws_rego/r53_checks/docs/: empty_zones.md
aws_rego/r53_checks/empty_zones/: empty_zones.py  empty_zones.rego  manifest.toml  pyproject.toml  test_empty_zones.py
aws_rego/rds_checks/: README.md  mkdocs.yml  pyproject.toml  rds_test_data.json
aws_rego/rds_checks/docs/: empty_storage.md  old_snapshots.md  rds_idle.md  scaling_down.md
aws_rego/rds_checks/empty_storage/: empty_storage.py  empty_storage.rego  manifest.toml  pyproject.toml  test_empty_storage.py
aws_rego/rds_checks/rds_idle/: pyproject.toml  rds_idle.py  rds_idle.rego  rds_idle.toml  test_rds_idle.py
aws_rego/rds_checks/rds_old_snapshots/: manifest.toml  pyproject.toml  rds_old_snapshots.py  rds_old_snapshots.rego  rds_old_snapshots.toml  test_rds_old_snapshots.py
aws_rego/rds_checks/scaling_down/: manifest.toml  pyproject.toml  scaling_down.py  scaling_down.rego  scaling_down.toml  test_scaling_down.py
aws_rego/s3_checks/: README.md  mkdocs.yml  pyproject.toml  s3_test_data.json
aws_rego/s3_checks/docs/: object_last_modified.md  storage_class_usage.md  unused_buckets.md
aws_rego/s3_checks/object_last_modified/: manifest.toml  object_last_modified.py  object_last_modified.rego  (+2 more)
azure_providers/db/: pyproject.toml
azure_providers/vm/: pyproject.toml
azure_rego/db/: pyproject.toml
azure_rego/vm_checks/: azure_vm_test_data.json  pyproject.toml
handlers/general_handler/: README.md  general_handler.py  manifest.toml  pyproject.toml
handlers/rego_handler/: manifest.toml  pyproject.toml  rego_handler.py
outputs/Azure/: README.md  pyproject.toml
outputs/PagerDuty/: README.md  pagerDuty.py  pyproject.toml
outputs/cli/: README.md  cli.py  cli_output.toml  pyproject.toml
outputs/email/: README.md  email_out.toml  pyproject.toml
outputs/json_file/: README.md  pyproject.toml
outputs/slack/: README.md  pyproject.toml
outputs/text_file/: README.md  pyproject.toml  text_file.py  text_output.toml
(+174 files in other folders)
