[project]
name = "opsbox-modules"
version = "0.1.2"
description = "Plugins for Opsbox"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "loguru>=0.7.2",
    "opsbox==0.2.0",
    "pydantic>=2.10.2",
    "pymdown-extensions>=10.12",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
testing = [
    "boto3>=1.36.4",
    "moto>=5.0.27",
    "pytest>=8.3.4",
    "slack-sdk>=3.34.0",
]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=./tests/integration"
]
pythonpath = [
  "."
]
