[project]
name = "opsbox-modules"
version = "0.1.2"
description = "Plugins for Opsbox"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "azure-identity>=1.20.0",
    "azure-mgmt-compute>=34.0.0",
    "azure-mgmt-monitor>=6.0.2",
    "azure-mgmt-network>=28.1.0",
    "loguru>=0.7.2",
    "opsbox==0.2.0",
    "pathspec>=0.12.1",
    "pydantic>=2.10.2",
    "pymdown-extensions>=10.12",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
testing = [
    "boto3>=1.36.4",
    "moto>=5.0.27",
    "pytest>=8.3.4",
    "slack-sdk>=3.34.0",
]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=./tests/integration"
]
pythonpath = [
  "."
]
