[project]
name = "opsbox-aws-providers"
version = "0.1.0"
description = "Collection of AWS providers for opsbox."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.35.71",
    "loguru>=0.7.2",
]

[tool.uv]
dev-dependencies = [
    "moto>=5.0.22",
    "pytest>=8.3.4",
]

[tool.uv.workspace]
members = ["elb", "ec2", "iam", "r53", "rds", "s3"]
