[project]
name = "aws-rego"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.35.71",
    "loguru>=0.7.2",
]

[tool.uv]
dev-dependencies = [
    "moto>=5.0.22",
    "pytest>=8.3.4",
]

[tool.uv.workspace]
members = ["ec2_checks/ec2_old_snapshots", "ec2_checks/idle_instances", "ec2_checks/stray_ebs", "ec2_checks/stray_instances", "ec2_checks/unattached_eips", "elb_checks/high_error_rate", "elb_checks/inactive_load_balancers", "elb_checks/low_request_counts", "iam_checks/console_access", "iam_checks/mfa_enabled", "iam_checks/overdue_api_keys", "iam_checks/unused_policies"]
