[project]
name = "opsbox-cost-savings-assistant"
version = "0.1.2"
description = "Cost savings assistant for opsbox"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [    
    "loguru>=0.7.3",
    "pluggy>=1.5.0",
]

[project.entry-points.'opsbox.plugins']
opsbox_cost_savings_assistant = "cost_savings.cost_savings:CostSavings"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"cost_savings" = ["*.rego", "manifest.toml"]