[project]
name = "opsbox-elb-provider"
version = "0.1.2"
description = "Opsbox provider for ELB checks"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.35.71",
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "opsbox-general-provider>=0.1.2"
]

[project.entry-points.'opsbox.plugins']
opsbox_elb_provider = "elb_provider.elb_provider:elbProvider"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"elb_provider" = ["manifest.toml"]