[project]
name = "opsbox-r53-provider"
version = "0.1.3"
description = "Opsbox provider for Route 53 checks"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.35.71",
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "opsbox-general-handler>=0.1.2"]


[project.entry-points.'opsbox.plugins']
opsbox_r53_provider = "r53_provider.r53_provider:Route53Provider"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"r53_provider" = ["manifest.toml"]

[tool.uv]
dev-dependencies = [
    "moto[all]>=5.0.26",
    "pytest>=8.3.4",
]
