[project]
name = "opsbox-rds-provider"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.35.71",
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "opsbox-general-provider>=0.1.2"
]

[project.entry-points.'opsbox.plugins']
opsbox_rds_provider = "rds_provider.rds_provider:RDSProvider"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"rds_provider" = ["manifest.toml"]