[project]
name = "opsbox-s3-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.35.71",
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
]

[project.entry-points.'opsbox.plugins']
opsbox_s3_provider = "s3_provider.s3_provider:S3Provider"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"s3_provider" = ["manifest.toml"]