[project]
name = "opsbox-s3-provider"
version = "0.1.3"
description = "Opsbox provider for S3 checks"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.35.71",
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "opsbox-general-handler>=0.1.2"
]

[project.entry-points.'opsbox.plugins']
opsbox_s3_provider = "s3_provider.s3_provider:S3Provider"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"s3_provider" = ["manifest.toml"]

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "opsbox-general-handler>=0.1.2",
    "pytest>=8.3.4",
]
