[project]
name = "opsbox-ec2-checks"
version = "0.1.4"
description = "Collection of EC2 checks for opsbox."
readme = "README.md"
license = {file = "LICENCE.txt"}
requires-python = "==3.11.*"
dependencies = [
    "opsbox-ec2-provider>=0.1.2",
    "opsbox-rego-handler>=0.1.2"
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.entry-points.'opsbox.plugins']
opsbox_ec2_old_snapshots = "ec2_old_snapshots.ec2_old_snapshots.ec2_old_snapshots:EC2OLD"
opsbox_ec2_idle_instances = "idle_instances.idle_instances.idle_instances:IdleInstances"
opsbox_ec2_stray_ebs = "stray_ebs.stray_ebs.stray_ebs:StrayEbs"
opsbox_ec2_unattached_eips = "unattached_eips.unattached_eips.unattached_eips:UnattachedEips"

