[project]
name = "opsbox-elb-checks"
version = "0.1.5"
description = "Collection of ELB checks for opsbox"
readme = "README.md"
license = {file = "LICENCE.txt"}
requires-python = "==3.11.*"
dependencies = [
    "opsbox-elb-provider>=0.1.2",
    "opsbox-rego-handler>=0.1.2"
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "pytest>=8.3.4",
]

[project.entry-points.'opsbox.plugins']
opsbox_elb_low_request_counts = "low_request_counts.low_request_counts.low_request_count:LowRequestCount"
opsbox_elb_inactive_load_balancers = "inactive_load_balancers.inactive_load_balancers.inactive_load_balancers:InactiveLoadBalancers"
opsbox_elb_high_error_rate = "high_error_rate.high_error_rate.high_error_rate:HighErrorRate"
opsbox_elb_no_healthy_targets = "no_healthy_targets.no_healthy_targets.no_healthy_targets:NoHealthyTargets"

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
