[project]
name = "opsbox-r53-checks"
version = "0.2.0"
description = "Collection of Route 53 checks for opsbox"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "opsbox-r53-provider>=0.1.3",
    "opsbox-rego-handler>=0.2.0"
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.entry-points.'opsbox.plugins']
opsbox_r53_empty_zones = "empty_zones.empty_zones:EmptyZones"

