[project]
name = "opsbox-rds-checks"
version = "0.1.3"
description = "Collection of RDS checks for opsbox"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "opsbox-rds-provider>=0.1.2",
    "opsbox-rego-handler>=0.1.2"
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.entry-points.'opsbox.plugins']
opsbox_rds_empty_storage = "empty_storage.empty_storage.empty_storage:EmptyStorage"
opsbox_rds_idle = "rds_idle.rds_idle.rds_idle:RDSIdle"
opsbox_rds_old_snapshots = "rds_old_snapshots.rds_old_snapshots.rds_old_snapshots:RDSOldSnapshots"
opsbox_rds_scaling_down = "scaling_down.scaling_down.scaling_down:ScalingDown"
