[project]
name = "opsbox-s3-checks"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "opsbox-s3-provider>=0.1.2",
    "opsbox-rego-handler>=0.1.2"
]

[tool.setuptools.packages.find]
include = ["*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.entry-points.'opsbox.plugins']
opsbox_s3_unused_buckets = "unused_buckets.unused_buckets.unused_buckets:UnusedBuckets"
opsbox_s3_storage_class_usage = "storage_class_usage.storage_class_usage.storage_class_usage:StorageClassUsage"
opsbox_s3_object_last_modified = "object_last_modified.object_last_modified.object_last_modified:ObjectLastModified"
