[project]
name = "opsbox-s3-checks"
version = "0.1.3"
description = "Collection of S3 checks for opsbox"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "opsbox-s3-provider>=0.1.2",
    "opsbox-rego-handler>=0.1.2"
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.entry-points.'opsbox.plugins']
opsbox_s3_unused_buckets = "unused_buckets.unused_buckets.unused_buckets:UnusedBuckets"
opsbox_s3_storage_class_usage = "storage_class_usage.storage_class_usage.storage_class_usage:StorageClassUsage"
opsbox_s3_object_last_modified = "object_last_modified.object_last_modified.object_last_modified:ObjectLastModified"
