[project]
name = "opsbox-azure-db-provider"
version = "0.1.0"
description = "Opsbox provider for Azure DB checks"
readme = "README.md"
license = {file = "LICENCE.txt"}
requires-python = "==3.11.*"
dependencies = [
    "azure-identity>=1.21.0",
    "azure-mgmt-monitor>=6.0.2",
    "azure-mgmt-sql>=3.0.1",
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "opsbox-general-handler>=0.1.2"]

[project.entry-points.'opsbox.plugins']
opsbox_azure_db_provider = "db_provider.db_provider:AzureDBProvider"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"az_db_provider" = ["manifest.toml"]

[tool.uv]
dev-dependencies = [
    "moto[all]>=5.0.26",
    "pytest>=8.3.4",
]
