[project]
name = "opsbox_general_handler"
version = "0.1.0"
description = "General Handler for opsbox."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
]

[project.entry-points.'opsbox.plugins']
opsbox_general_handler = "general_handler.general_handler:GeneralHandler"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"general_handler" = ["manifest.toml"]
