[project]
name = "opsbox-rego-handler"
version = "0.1.3"
description = "Handles rego plugins for opsbox"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
]

[project.entry-points.'opsbox.plugins']
rego_handler = "rego_handler.rego_handler:RegoHandler"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"rego_handler" = ["manifest.toml"]
