[project]
name = "opsbox-azure-output"
version = "0.1.4"
description = "Azure issues output for opsbox"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "llama-index>=0.12.6",
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "markdown>=3.7",
    "pluggy>=1.5.0",
    "pydantic>=2.10.2",
    "requests>=2.32.3",
    "opsbox-general-handler>=0.1.2"
]

[project.entry-points.'opsbox.plugins']
opsbox_azure_out = "azure.azure:AzureOutput"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"azure_out" = ["manifest.toml"]