[project]
name = "opsbox-cli-output"
version = "0.1.2"
description = "Command-line output for opsbox"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "opsbox-general-handler>=0.1.2"
]

[project.entry-points.'opsbox.plugins']
opsbox_cli = "cli.cli:CLIOutput"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"cli_output" = ["manifest.toml"]
