[project]
name = "opsbox_email_out"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "pydantic>=2.10.2",
]

[project.entry-points.'opsbox.plugins']
opsbox_email_out = "email.smtp:EmailOutput"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"email_out" = ["manifest.toml"]