[project]
name = "opsbox-email-output"
version = "0.1.4"
description = "Email output for Opsbox"
readme = "README.md"
license = {file = "LICENCE.txt"}
requires-python = "==3.11.*"
dependencies = [
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "pydantic>=2.10.2",
    "opsbox-general-handler>=0.1.2"
]

[project.entry-points.'opsbox.plugins']
opsbox_email_out = "email.email.smtp:EmailOutput"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"email_out" = ["manifest.toml"]