[project]
name = "opsbox-json-file-output"
version = "0.1.0"
description = "JSON file output for opsbox."
readme = "README.md"
license = {file = "LICENCE.txt"}
requires-python = "==3.11.*"
dependencies = [
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "opsbox-general-handler>=0.1.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"json_file_output" = ["manifest.toml"]

[project.entry-points.'opsbox.plugins']
json_file_output = "json_file.json_file:JSONFileOutput"