[project]
name = "opsbox-slack-output"
version = "0.1.3"
description = "Slack channel output for opsbox"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "pluggy>=1.5.0",
    "pydantic>=2.10.2",
    "slack-sdk>=3.34.0",
    "opsbox-general-handler>=0.1.2"
]

[project.entry-points.'opsbox.plugins']
opsbox_slack_out = "slack.slack:SlackOutput"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"slack_out" = ["manifest.toml"]