[project]
name = "opsbox-text-file-output"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.11.*"
dependencies = [
    "loguru>=0.7.2",
    "pluggy>=1.5.0",
    "opsbox-general-handler>=0.1.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"text_file_output" = ["manifest.toml"]

[project.entry-points.'opsbox.plugins']
text_file_output = "text_file.text_file:TextFileOutput"